FIX : correct start options FIX : HEAP and PERM could not be updated before... FEAT : add documentation and fix code about JMX Port to monitor JMX TRANS